--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -43,6 +43,7 @@ dd { width: 67%; }
 //dl .label { font-size: 16px; }
 
 .sidebar {
+	h3 { margin-bottom: 10px; }
 	dt, dd { float: none; }
 	dt { font-size: 0.8em; width: 100%;}
 	dd { margin-bottom: 5px; margin-left: 0; width: 100%; }
