--- a/app/views/admin/_nav.html.erb
+++ b/app/views/admin/_nav.html.erb
@@ -54,6 +54,7 @@
 			<%= nav_link('Expire Entries', expire_entries_path) %>
 			<%= nav_link('Tag Payments', tag_payments_path) %>
 			<%= nav_link('Send Payment Reminders', send_payment_reminder_path) %>
+			<%= nav_link('Send Delivery Reminders', delivery_reminder_path) %>
 		</ul>
 	<% end %>
 </ul>
