--- a/app/views/bids/create.js.erb
+++ b/app/views/bids/create.js.erb
@@ -1,13 +1,17 @@
+$("td .invalid").remove();
+
 <% unless @new_bids.blank? && @existing_bids.blank? %>
 
+	$("#bidding-message .invalid").fadeOut();
+	
 	<% @new_bids.group_by(&:line_item).each do |line_item, bids| %>
 		<% bids.each do |bid| %>
 			<% if bid.valid? %>
-				$("#<%= line_item.id %> .<%= bid.bid_type[0..3] %> .invalid").remove();
-				$("#<%= line_item.id %> .<%= bid.bid_type[0..3] %>").append("<%= escape_javascript(render bid) %>").effect("highlight", {}, 5000);
+				$("#<%= line_item.id %> .<%= bid.bid_type[0..3] %> .bid-container").html("<%= escape_javascript(render bid) %>").effect("highlight", {}, 5000);
 				$("#<%= line_item.id %> .<%= bid.bid_type[0..3] %> input").val('');    
 			<% else %>
-				$("#<%= line_item.id %> .<%= bid.bid_type[0..3] %>").append("<%= escape_javascript(render 'seller/invalid_bid_msg') %>");
+				$("#<%= line_item.id %> .<%= bid.bid_type[0..3] %> .bid-container").html("<%= escape_javascript(render 'seller/invalid_bid_msg') %>");
+				$("#<%= line_item.id %> .invalid").animate({padding: '5'}, 'fast', 'easeOutElastic');
 			<% end %>
 		<% end %>
 	<% end %>
@@ -15,11 +19,11 @@
 	<% @existing_bids.group_by(&:line_item).each do |line_item, bids| %>
 		<% bids.each do |bid| %>
 			<% if bid.valid? %>
-				$("#<%= line_item.id %> .<%= bid.bid_type[0..3] %> .invalid").remove();
-				$("#<%= line_item.id %> .<%= bid.bid_type[0..3] %> #bid_<%= bid.id %>").html("<%= escape_javascript(render bid) %>").effect("highlight", {}, 5000);
+				$("#<%= line_item.id %> .<%= bid.bid_type[0..3] %> .bid-container").html("<%= escape_javascript(render bid) %>").effect("highlight", {}, 5000);
 				$("#<%= line_item.id %> .<%= bid.bid_type[0..3] %> input").val('');    
 			<% else %>
-				$("#<%= line_item.id %> .<%= bid.bid_type[0..3] %>").append("<%= escape_javascript(render 'seller/invalid_bid_msg') %>");
+				$("#<%= line_item.id %> .<%= bid.bid_type[0..3] %> .bid-container").append("<%= escape_javascript(render 'seller/invalid_bid_msg') %>");
+				$("#<%= line_item.id %> .invalid").animate({padding: '5'}, 'fast', 'easeOutElastic');
 			<% end %>
 		<% end %>
 	<% end %>
