--- a/app/views/cart/_cart_rules.html.erb
+++ b/app/views/cart/_cart_rules.html.erb
@@ -29,7 +29,7 @@
 		<%= "#{content_tag :code, 'RH'} and #{content_tag :code, 'LH'} must be 2 separate items.  Never on the same description.".html_safe %>
 		<%= cart_rules_helper('Lh And Rht Headlight') %>
 		<%= content_tag :p, class: 'good-p' do %>
-      <%= content_tag(:span, "Good", class: 'label success') %>
+      <%= content_tag(:span, "Good", class: 'label label-success') %>
       <%= content_tag(:code, 'LH Headlight', class: 'good-code') %> and <%= content_tag(:code, 'RH Headlight') %>
       <%= content_tag(:em, "Separate items.", class: 'specs highlight')  %>
     <% end %>
