--- a/app/views/messages/show_fields.js.erb
+++ b/app/views/messages/show_fields.js.erb
@@ -1,2 +1,2 @@
 $("div.msg-form").html("<%= escape_javascript(render 'messages/quick_msg_form') %>").slideDown('slow');
-$("div.msg-form").effect("highlight");
+$("div.msg-form").effect("highlight", {}, 5000);
