--- a/app/views/buyer/show.html.erb
+++ b/app/views/buyer/show.html.erb
@@ -6,7 +6,7 @@
 	<%= render 'shared/sidebar_dates' %>
 <% end %>
 
-<%#= render 'shared/photo_set' %>
+<%= render 'shared/photo_set' %>
 
 <div id="parts-list">
 	<% if @entry.line_items.present? %>
@@ -29,6 +29,5 @@
 	<% end %>
 </div>
 
-
-
+<%= render 'shared/fancy_box' %>
 
