--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -1,7 +1,7 @@
 <% title "New Entry" %>
 <% subtitle "Fields marked with #{content_tag :em, 'asterisks (*)'} are required.".html_safe %>
 
-<%= simple_nested_form_for @entry, validate: true do |f| %>
+<%= simple_form_for @entry, :validate => true do |f| %>
 	<%= render 'form', f: f %>
 <% end %>
 
