--- a/app/views/messages/_quick_msg_form.html.erb
+++ b/app/views/messages/_quick_msg_form.html.erb
@@ -6,10 +6,10 @@
 	<%= hidden_field_tag 'order', @order if @order %>
 	<%= hidden_field_tag 'open_tag', params[:open_tag] %>
 	<%= f.hidden_field :parent_id if @message.parent %>
-	<% if @msg_for == 'seller' %>
-		<%= hidden_field_tag 'receiver', @message.parent.user.id %>
-		<%= hidden_field_tag 'receiver_company', @message.parent.user.company.id %>
-	<% end %>
+	<%# if @msg_for == 'seller' %>
+		<%#= hidden_field_tag 'receiver', @order.seller %>
+		<%#= hidden_field_tag 'receiver_company', @message.parent.user.company.id %>
+	<%# end %>
 
 	<%= message_label_and_field(f, @msg_for, params[:open_tag]) %>
 	<%= f.button :submit, class: 'btn btn-success floatright' %>
