--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -6,23 +6,23 @@
 
 	<%= content_tag :table, class: 'table table-condensed' do %>
 		<%= content_tag :thead do %>
-			<%= content_tag :th, 'ID', class: 'span1 center' %>
+			<%= content_tag :th, 'ID', class: 'span1 txttxtcenter' %>
 			<%= content_tag :th, 'Sender', class: 'span2' %>
 			<%= content_tag :th, 'receiver', class: 'span2' %>
 			<%= content_tag :th, 'Message', class: 'span11' %>
-			<%= content_tag :th, 'Order #', class: 'span2 center' %>
+			<%= content_tag :th, 'Order #', class: 'span2 txtcenter' %>
 		<% end %>
 		<%= content_tag :tbody do %>
 			<% @messages.group_by(&:entry).each do |entry, messages| %>
-				<tr class="label">
+				<tr class="well">
 					<%= content_tag :td, colspan: 5 do %>
-						<%= content_tag :b, "Entry ID # #{link_to(entry.id, entry)}".html_safe if entry %>
+						<%= content_tag :span, "Entry ID # #{link_to(entry.id, entry)}".html_safe if entry %>
 						<%= content_tag :span, entry.status, class: "label #{entry.status_color}" if entry %>
 					<% end %>
 				</tr>
 				<% messages.each do |m| %>
 					<tr>
-						<%= content_tag :td, m.id, class: 'span1 center' %>
+						<%= content_tag :td, m.id, class: 'span1 txtcenter' %>
 						<%= content_tag :td, class: 'span2' do %>
 							<%= content_tag :p, link_to(m.user.username, m.user) %>
 							<%= content_tag :em, m.user_company.nickname, class: 'small' %>
@@ -38,9 +38,9 @@
 							<%= content_tag :span, link_to('edit', edit_message_path(m)) %>
 							<%= content_tag :span, link_to('delete', m, confirm: 'Are you sure you want to delete this message?', method: :delete) %>
 						<% end %>
-						<%= content_tag :td, class: 'span2 center' do %>
+						<%= content_tag :td, class: 'span2 txtcenter' do %>
 							<%= content_tag :p, link_to(m.order_id, m.order) if m.order %>
-							<%= content_tag :span, m.order.status, class: "label #{m.order.status_color}" if m.order %>
+							<%= content_tag :span, m.order.status, class: "#{m.order.status_color}" if m.order %>
 						<% end %>
 					</tr>
 				<% end %>
