--- a/app/views/seller/bids.html.erb
+++ b/app/views/seller/bids.html.erb
@@ -4,20 +4,12 @@
 
 <%= content_tag :table, class: 'table table-condensed' do %>
 
-	<%= content_tag :thead do %>
-		<%= content_tag :tr do %>
-			<%= content_tag :th, 'Vehicle', class: 'span4' %>
-			<%= content_tag :th, 'Parts', class: 'span5' %>
-			<%= content_tag :th, 'Orig', class: 'span2 txtcenter' %>
-			<%= content_tag :th, 'Rep', class: 'span2 txtcenter' %>
-			<%= content_tag :th, 'Surp', class: 'span2 txtcenter' %>
-		<% end %>
-	<% end %>
+	<%= render 'bids/thead_index' %>
 
 	<% @bids.group_by{ |b| b.created_at.beginning_of_day }.each do |date, grouped_bids| %>
 		<%= content_tag :tr do %>
 			<%= content_tag :td, colspan: 5, class: 'well' do %>
-				<%= content_tag :h5, regular_date(date) %>
+				<%= content_tag :h5, regular_date(date, 'day') %>
 			<% end %>
 		<% end %>
 		
@@ -25,18 +17,17 @@
 
 			<%= content_tag :tr do %>
 				<%= content_tag :td, class: 'span4', rowspan: bids.collect(&:line_item).uniq.count + 1  do %>
-	      <%= content_tag :p, link_to(entry.model_name, seller_show_path(entry))  %>
-					<%= content_tag :p, entry.plate_no %>
-					<%= content_tag :em, "created by #{entry.user.username}" if entry.user && entry.has_order %>
 					<%= content_tag :span, entry.show_status, class: "label #{entry.status_color}" %>
-					<%#= content_tag :p, long_date(entry.online), class: 'small' %>
+		      <%= content_tag :p, link_to(entry.model_name, seller_show_path(entry))  %>
+					<%= content_tag :p, entry.plate_no %>
+		      <%= content_tag :p, "Online: #{entry.online.strftime('%R')}", class: 'small muted' if entry.online %>
 					<%= content_tag :p, supplier_bid_rate(entry, bids), class: 'small' %>
 				<% end %>
 			<% end %>
 		
 			<% bids.group_by(&:line_item).each do |item, bts| %>
 				<%= content_tag :tr do %>
-					<%= content_tag :td, class: 'span5' do %>
+					<%= content_tag :td, class: 'span4' do %>
 						<%= content_tag :span, item.part_name %>
 					<% end %>
 					<%= content_tag :td, class: 'span2 txtcenter bids' do %>
@@ -72,9 +63,14 @@
 	  <%= f.label 'Plate No.' %>
 	  <%= f.text_field :entry_plate_no_cont, class: 'span2' %>
 	  <%= f.label 'Car Brand' %>
-	  <%= f.grouped_collection_select :car_brand_id_eq, CarOrigin.all, :car_brands, :name, :id, :name, {include_blank: true} %>
+	  <%= f.grouped_collection_select :car_brand_id_eq, @car_origins, :car_brands, :name, :id, :name, {include_blank: true} %>
 	  <%= f.label 'Status' %>
 	  <%= f.select :status_eq, Bid::STATUS_TAGS, {include_blank: true} %>
-	  <%= content_tag :p, (f.submit 'Search', class: 'btn primary') %>
+	  <%= content_tag :p do %>
+			<%= f.submit 'Search', class: 'btn btn-primary' %>
+			<%= refresh_button %>
+		<% end %>
 	<% end %>
 <% end %>
+
+<%= render 'shared/tooltip_delete' %>
